<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ImageOrDate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="8dp"
    app:cardBackgroundColor="@color/white"
    android:layout_margin="40dp"
    android:showDividers="middle">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/sByImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/imageselect"
                android:background="@color/white"
                android:scaleType="centerCrop"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="by Image"
                android:textSize="9pt"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="4dp"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:layout_margin="10dp"/>
        <LinearLayout
            android:id="@+id/sByDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/dateselect"
                android:background="@color/white"
                android:scaleType="centerCrop"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="by Date"
                android:textSize="9pt"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>