<!--
  ~ Copyright (C) 2019 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">oNbeat</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="directory_path">/storage/emulated/0/DCIM/oNbeat/</string>

    <string name="permission_not_granted">oNbeat requires access to storage and network to work properly.</string>

    <string name="label_race_number">1991</string>
    <string name="label_total">Total</string>
    <string name="label_total_time">11111111</string>
    <string name="label_start">Start</string>
    <string name="label_start_time">12345678</string>
    <string name="image_start">start image</string>
    <string name="label_finish_time">23456789</string>
    <string name="label_finish">Finish</string>
    <string name="image_finish">finish image</string>
    <string name="apply">Apply</string>

    <string name="connected">0</string>
    <string name="hotspot">ic_hotspot</string>
    <string name="open">ic_open</string>
    <string name="save">ic_save</string>
    <string name="mode">ic_mode</string>
    <string name="clear">ic_clear</string>
    <string name="fab_apply">Apply</string>
    <string name="fab">Floating Action Button</string>
</resources>
