...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".GalleryFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/gallery"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:fastScrollEnabled="true"
        app:fastScrollHorizontalThumbDrawable="@drawable/thumb_drawable"
        app:fastScrollHorizontalTrackDrawable="@drawable/line_drawable"
        app:fastScrollVerticalThumbDrawable="@drawable/thumb_drawable"
...
                            android:src="@drawable/onbeat"
                            android:contentDescription="@string/app_name"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="10dp"/>

                        <RelativeLayout
                            android:id="@+id/startLayout"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_weight="1"
                            android:scaleType="fitEnd"
                            android:orientation="horizontal">
...
